--- a/ginza.html
+++ b/ginza.html
@@ -4,7 +4,8 @@
 <head>
 
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="(max-width:1024px)" href="style.css">
+    <link rel="stylesheet" media="(min-width:1024px)" href="pc.css">
     <title>Matcha Sweets</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">　
     <!--
